bin_PROGRAMS = clay

clay_SOURCES = Terminal.h Terminal.cc \
		Descriptor.cc Descriptor.h \
		Net.h Net_atlas.cc Net_atlas.h \
		Gatherer.cc Shell.cc Shell.h Command.h \
		Module_Communicate.cc Module_Communicate.h \
		Module_Connect.cc Module_Connect.h \
		Module_Objects.cc Module_Objects.h \
		Commclient.cc Commclient.h \
		main.cc
